[tool.poetry]
name = "sorter_visualiser"
version = "0.1.0"
description = "sorting visualiser made in pygame with variety of tools and algorithms"
authors = ["Wizock <silent.death3500@gmail.com>"]
license = "Creative Commons (author mandate)"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pygame-gui = "^0.6.4"
beartype = "^0.10.4"
mypy = "^0.942"
pydantic = "^1.9.0"
isort = "^5.10.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
